--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "moment": "github:moment/moment",
+    "swiper": "^5.3.7",
     "v-autosuggest": "^1.0.3",
     "v-gallery": "^1.2.4",
     "v-viewer": "^1.5.1",
     "vlightbox": "^2.0.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-easy-slider": "^5.3.2",
     "vue-flux": "^5.1.9",
     "vue-gallery-slideshow": "^1.5.0",
